k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: uqlnf
spec:
  replicas: 2
  selector: { matchLabels: { app: api } }
  template:
    metadata: { labels: { app: api } }
    spec:
      containers:
      - name: api
        image: australia-southeast1-docker.pkg.dev/corded-bivouac-468301-n3/uqlnf/backend:v1
        ports: [{ containerPort: 3000 }]
        readinessProbe:
          httpGet: { path: /healthz, port: 3000 }
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: /healthz, port: 3000 }
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: uqlnf
spec:
  selector: { app: api }
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
